Removed API key and replaced with placeholder

--- a/API_Weaher.ipynb
+++ b/API_Weaher.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "cb72b2f4",
    "metadata": {},
    "outputs": [],
    "source": [
     "baseurl = \"http://api.weatherapi.com/v1\"\n",
-    "janeth_key = \"3fc86409ee194283b5e11745250309\""
+    "\n",
+    "janeth_key = \"your_real_api_key\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "460b4d0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# http://api.weatherapi.com/v1/current.json?key=3fc86409ee194283b5e11745250309&q=London"
+    "# http://api.weatherapi.com/v1/current.json?key=janeth_key&q=London\n",
+    "\n"
    ]
   },
   {
@@ -34,13 +36,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d726fbc2",
    "metadata": {},
    "outputs": [],
    "source": [
     "city = \"Louisville\"\n",
-    "baseurl = f\"http://api.weatherapi.com/v1/current.json?key=3fc86409ee194283b5e11745250309&q={city}\"\n",
+    "baseurl = f\"http://api.weatherapi.com/v1/current.json?key='janeth-key'&q={city}\"\n",
     "response = requests.get(baseurl)"
    ]
   },
@@ -172,7 +174,7 @@
    "outputs": [],
    "source": [
     "def get_weather(city):\n",
-    "    url = f\"http://api.weatherapi.com/v1/current.json?key=3fc86409ee194283b5e11745250309&q={city}\"\n",
+    "    url = f\"http://api.weatherapi.com/v1/current.json?key='janeth_key'&q={city}\"\n",
     "    response = requests.get() \n",
     "    response = requests.get(url)\n",
     "    \n",
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "6bde2013",
    "metadata": {},
    "outputs": [
@@ -279,7 +281,7 @@
     "cities = [\"Kapaa\", \"Louisville\", \"Bogota\", \"Morehead\", \"New York\"]\n",
     "weather_data =[]\n",
     "for city in cities:\n",
-    "    url = f\"http://api.weatherapi.com/v1/current.json?key=3fc86409ee194283b5e11745250309&q={city}\"\n",
+    "    url = f\"http://api.weatherapi.com/v1/current.json?key='janeth_key'&q={city}\"\n",
     "    response = requests.get(url)\n",
     "    \n",
     "    if response.status_code == 200:\n",
