Removed API key and replaced with placeholder

--- a/weather_api_part2.ipynb
+++ b/weather_api_part2.ipynb
@@ -14,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "a1d35c5c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = \"cc7f3cc92fb3404086a215950250409 \"\n",
+    "api_key = \"your_api_key_here\"\n",
     "baseurl = \" http://api.weatherapi.com/v1\"\n",
     "# f\"http://api.weatherapi.com/v1/current.json?key={api_key}&q={city}\" \n",
     "city=\"louisville\""
